--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "lib": [
       "es2022"
     ],
+    "baseUrl": "./",
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -23,8 +24,19 @@
     "skipLibCheck": true,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    }
   },
+  "include": [
+    "bin/**/*.ts",
+    "lib/**/*.ts",
+    "test/**/*.ts",
+    "jest.config.ts",
+  ],
   "exclude": [
     "node_modules",
     "cdk.out"
