--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "cdk-template": "bin/cdk-template.js"
   },
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix --concurrency=auto",
+    "format": "biome format --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "biome lint --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "check": "biome check --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "typecheck": "tsc --noEmit",
     "bootstrap": "cdk bootstrap",
     "deploy": "cdk deploy",
@@ -19,24 +20,15 @@
     "constructs": "^10.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
+    "@biomejs/biome": "^1.9.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.19.2",
     "aws-cdk": "^2.1101.0",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.5.0",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.47.0"
+    "typescript": "^5.9.2"
   }
 }
