--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -7,11 +7,9 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "node_modules",
-      "cdk.out",
-      "*.js",
-      "*.mjs"
+    "includes": [
+      "src/**/*.ts",
+      "test/**/*.ts"
     ]
   },
   "formatter": {
@@ -22,9 +20,6 @@
     "lineEnding": "lf",
     "lineWidth": 100,
     "attributePosition": "auto"
-  },
-  "organizer": {
-    "enabled": true
   },
   "linter": {
     "enabled": true,
@@ -61,9 +56,9 @@
   },
   "overrides": [
     {
-      "include": [
-        "*.test.ts",
-        "*.spec.ts"
+      "includes": [
+        "**/*.test.ts",
+        "**/*.spec.ts"
       ],
       "linter": {
         "rules": {
