--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "cdk-template": "bin/cdk-template.js"
   },
   "scripts": {
-    "format": "biome format --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "biome lint --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "check": "biome check --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "biome format --write src test",
+    "lint": "biome lint --write src test",
+    "check": "biome check --write src test",
     "typecheck": "tsc --noEmit",
     "bootstrap": "cdk bootstrap",
     "deploy": "cdk deploy",
@@ -20,7 +20,7 @@
     "constructs": "^10.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.3.11",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.19.2",
     "aws-cdk": "^2.1101.0",
