--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
     "lib": [
       "es2022"
     ],
-    "baseUrl": "./",
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -27,7 +26,7 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*"
       ]
     }
   },
